2006-12-17  Jens Persson
    
    * Added chapter about sinks and stuff
    * Various other fixes

2006-12-16  Jens Persson
    
    * Added Pipeline chapter
    * Updated introduction

2006-12-15  Jens Persson
    
    * Initial release