@@ -1,4 +1,8 @@
 <literallayout>
+<emphasis role="bold">2006-12-19  Jens Persson</emphasis>
+
+    * Added Seeking chapter
+    
 <emphasis role="bold">2006-12-17  Jens Persson</emphasis>
     
     * Added chapter about sinks and stuff
