@@ -12,7 +12,9 @@
 </div>
 
 <h2>About</h2>
-  <div class="content"><p>Docs for the Python bindings for Gstreamer.</p></div>
+  <div class="content"><p>Docs for the Python 
+  <a href="http://gstreamer.freedesktop.org/modules/gst-python.html">bindings</a> for 
+  <a href="http://gstreamer.freedesktop.org">Gstreamer</a>.</p></div>
 <h2 id="toc">Table Of Contents</h2>
 <div class="content">
 <p>
@@ -34,6 +36,7 @@
             <ol>
             <li><a href="#audio">Audio</a></li>
              <li><a href="#video">Video</a></li>
+             <li><a href="#server">Server</a></li>
             </ol>
        <li><a href="#faq">FAQ</a></li>
   </ol>
@@ -77,16 +80,26 @@ make
 <h2 id="projects">Projects</h2>
 <h3 id="audio">Audio</h3>
 <div class="content">
+<a href="http://fuplayer.org/">FUPlayer</a><br />
+<a href="http://live.gnome.org/Istanbul">Istanbul</a><br />
 <a href="http://www.jokosher.org/">Jokosher</a><br />
+<a href="http://listengnome.free.fr/">Listen</a><br />
 <a href="http://www.sacredchao.net/quodlibet">Quodlibet</a>
  </div>
  
 <h3 id="video">Video</h3>
   <div class="content">
+<a href="http://www.fluendo.com/elisa">Elisa</a><br />
 <a href="http://www.pitivi.org/">PiTiVi</a><br />
 <a href="http://home.gna.org/ticasto/">Ticasto</a>
  </div>
 
+<h3 id="server">Server</h3>
+  <div class="content">
+<a href="http://www.flumotion.net/">Flumotion</a>
+
+ </div>
+ 
 <h2 id="faq">FAQ</h2>
 <div class="content">
 Q: I think the docs sucks and are incomplete. Why's that?<br /><br />
