@@ -4,16 +4,16 @@ body {background:#284450; color:#000000; padding:0; margin:5mm}
 
 div.title {height:22mm; width:100mm; margin-right:auto; margin-left:auto;
            right:auto; left:auto; top:0; bottom:auto; background:#7894a0; color:#284450;
-           border:1mm solid #000000; text-align:center}
+           border:1.1mm solid #425d6a; text-align:center}
 
 div.mail {text-align:center}
 
 div.h3 {margin-left:5mm}
 
-div.content {background:#cccccc; padding:3mm; border:1mm solid #000000}
+div.content {background:#cccccc; padding:3mm; border:1mm solid #808080}
 
 div.code {white-space:pre; font-family:monospace; margin:5mm;
-               background:#bbbbbb; border:0.7mm solid #111111; padding:5mm}
+               background:#bbbbbb; border:0.8mm solid #555555; padding:5mm}
 
 h2 {color:#c04040; margin-left:5mm}
 h3 {color:#40c040; margin-left:10mm}
