@@ -1,3 +1,7 @@
+2006-12-19  Jens Persson
+
+    * Added Seeking chapter
+    
 2006-12-17  Jens Persson
     
     * Added chapter about sinks and stuff
